# ParallelCG

./: .gitignore  .travis.yml  CGSolver.cpp  CGSolver.h  CMakeLists.txt  CONTRIBUTING.md  README.md  generate.py  main.cpp  validate.py
LINALG/: SymmetricMatrix.cpp  SymmetricMatrix.h  Vector.cpp  Vector.h
scitas/: scitas.py  template.sh
src/: CGSolver.cpp  CGSolver.h  main.cpp
src/LINALG/: DimensionMismatch.h  DistributedSymmetricMatrix.cpp  DistributedSymmetricMatrix.h  DistributedVector.cpp  DistributedVector.h  SymmetricMatrix.cpp  SymmetricMatrix.h  Vector.cpp  Vector.h
src/MPI/: MpiInfo.cpp  MpiInfo.h
src/NUMPY/: NumpyIOException.h  NumpyUtils.cpp  NumpyUtils.h
src/Utils/: Random.cpp  Random.h
test/: CGSolverTest.cpp  DistributedSymmetricMatrixTests.cpp  DistributedVectorTests.cpp  MpiTests.cpp  NumpyIOTest.cpp  RandomTest.cpp  SymmetricMatrixTests.cpp  VectorTests.cpp  generateMatrixVector.py  gtest-mpi-listener.h  maintest.cpp  testCGSolver.py  testNumpyO.py
test/data/: testarroutparallel.npy  testmat.npy
